--- a/index.html
+++ b/index.html
@@ -75,13 +75,11 @@
                     </div>
                 </div>
             </nav>
-            <!-- imagen principal -->
+        </header>
+        <main class="main-index">
             <div>
                 <img src="./recursos/imagen principal-inicio.jpg" alt="Paisaje Río Negro">
             </div>
-        </header>
-        <!-- contenido principal -->
-        <main class="main-index">
             <ul>
                 <li><a href="./pages/informacion.html">Centro de Información Turística</a>
                 </li>
@@ -89,18 +87,26 @@
                 <li><a href="https://web.whatsapp.com/">WHATSAPP</a></li>
             </ul>
             <!-- regiones y calendario -->
-            <section class="grilla-index">
+            <section>
                 <article> <img src="./recursos/cordillera.jpg" alt="Cordillera">
-                    <H2>Cordillera</H2>
+                    <a href="#">
+                        <H2>Cordillera</H2>
+                    </a>
                 </article>
                 <article> <img src="./recursos/estepa.jpg" alt="Estepa">
-                    <h2>Estepa</h2>
+                    <a href="#">
+                        <H2>Estepa</H2>
+                    </a>
                 </article>
                 <article> <img src="./recursos/valle.jpg" alt="Valle">
-                    <h2>Valle</h2>
+                    <a href="#">
+                        <H2>Valle</H2>
+                    </a>
                 </article>
                 <article> <img src="./recursos/costa.jpg" alt="Costa">
-                    <h2>Costa</h2>
+                    <a href="#">
+                        <H2>Costa</H2>
+                    </a>
                 </article>
                 <article> <img src="./recursos/calendario 1-01.jpg" alt="Calendario Fechas Festivas del mes">
                     <h2>Días Festivos</h2>
@@ -108,9 +114,23 @@
             </section>
         </main>
         <!-- pie de página -->
-        <footer>
-            <!-- información de copy -->
-            <p>&copy Coder Comision 53780</p>
+        <footer class="footer">
+            <div>
+                <h4>Redes Sociales</h4>
+                <ul>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">whatsapp</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
