Agregue animaciones, iconos y seo

--- a/pages/imperdibles.html
+++ b/pages/imperdibles.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>El Bolsón</title>
+    <meta name="description" content="El Bolsón es una ciudad de la Patagonia argentina, rodeada de paisajes espectaculares y actividades al aire libre. Descubre qué ver y hacer en El Bolsón y su Comarca Andina, con consejos …">
+    <meta name="keywords" content="RIO NEGRO, PATAGONIA, EL BOLSÓN, VACACIONES, AVENTURA">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <title>El Bolsón</title>
+    <link rel="shortcut icon" href="../recursos/logo-chico-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -59,7 +64,7 @@
                                 <a class="nav-link" href="../pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima</a>
+                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -79,34 +84,41 @@
             <div>
                 <img src="../recursos/Turismo-el-bolson.jpg" alt="Paisaje El Bolsón">
             </div>
-            <div class="h1">
+            <div class="animate__animated animate__fadeInDown">
                 <h1>El Bolsón</h1>
             </div>
-            <h2>Aquí comienza tu viaje</h2>
-            <p>Lugar de personas que han vivido y cultivado la tierra, en la rivera del Río Azul, con aguas cristalinas
-                y
-                serpenteantes, entre montañas protectoras de fuertes vientos que acogen un clima excepcional. Habitantes
-                de
-                aquí
-                y de allá, de otros rincones de la Argentina u otras partes del mundo, que decidieron echar raíces en
-                este
-                ensoñado lugar.</p>
-            <br>
-            <p>Hacia el oeste de la ciudad se pueden acceder al Mirador del Azul y desde allí tomar un sendero, o
-                conducir
-                hasta
-                llegar al Río Azul. Hacia el norte, se encuentra la hermosa Catarata de Mallín Ahogado, y las chacras
-                que
-                también pueden ser visitadas a través de un camino accesible para todo tipo de vehículo; o la chacra
-                Wharton,
-                uno de los puntos de partida para la red más grande de refugios de montaña. Si nos direccionamos hacia
-                el
-                Este,
-                no es posible dejar de lado al increíble Bosque Tallado en el imponente Cerro Piltriquitrón, donde
-                encontraran
-                alrededor de 61 esculturas luego de haber pasado por el privilegiado mirador del valle en la plataforma.
-            </p>
-
+            <section>
+                <h2>Aquí comienza tu viaje</h2>
+                <p>Lugar de personas que han vivido y cultivado la tierra, en la rivera del Río Azul, con aguas
+                    cristalinas
+                    y
+                    serpenteantes, entre montañas protectoras de fuertes vientos que acogen un clima excepcional.
+                    Habitantes
+                    de
+                    aquí
+                    y de allá, de otros rincones de la Argentina u otras partes del mundo, que decidieron echar raíces
+                    en
+                    este
+                    ensoñado lugar.</p>
+                <br>
+                <p>Hacia el oeste de la ciudad se pueden acceder al Mirador del Azul y desde allí tomar un sendero, o
+                    conducir
+                    hasta
+                    llegar al Río Azul. Hacia el norte, se encuentra la hermosa Catarata de Mallín Ahogado, y las
+                    chacras
+                    que
+                    también pueden ser visitadas a través de un camino accesible para todo tipo de vehículo; o la chacra
+                    Wharton,
+                    uno de los puntos de partida para la red más grande de refugios de montaña. Si nos direccionamos
+                    hacia
+                    el
+                    Este,
+                    no es posible dejar de lado al increíble Bosque Tallado en el imponente Cerro Piltriquitrón, donde
+                    encontraran
+                    alrededor de 61 esculturas luego de haber pasado por el privilegiado mirador del valle en la
+                    plataforma.
+                </p>
+            </section>
             <div class="maps">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23732.883522361408!2d-71.54454587061241!3d-41.96570179910097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961bbe292d49ca89%3A0xa4fcd4026336e0f6!2zRWwgQm9sc8OzbiwgUsOtbyBOZWdybw!5e0!3m2!1ses-419!2sar!4v1709405990642!5m2!1ses-419!2sar"
@@ -114,9 +126,23 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
-        <footer>
-            <!-- información de copy -->
-            <p>&copy Coder Comision 53780</p>
+        <footer class="footer">
+            <div>
+                <h4>Redes Sociales</h4>
+                <ul>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">whatsapp</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
