--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Río Negro</title>
+    <meta name="description" content="Descubre las mejores opciones para disfrutar de la provincia de Río Negro, desde la aventura hasta la cultura, pasando por la gastronomía y el vino. Explora los paisajes, las …">
+    <meta name="keywords" content="RIO NEGRO, VACACIONES, PATAGONIA, BARILOCHE, CORDILLERA, ESTEPA, VALLE, COSTA ">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <title>Río Negro</title>
+    <link rel="shortcut icon" href="./recursos/logo-chico-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -59,7 +64,7 @@
                                 <a class="nav-link" href="./pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima</a>
+                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -67,8 +72,8 @@
                                     Idioma
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Español</a></li>
-                                    <li><a class="dropdown-item" href="#">Inglés</a></li>
+                                    <li class="desplegable"><a class="dropdown-item" href="#">Español</a></li>
+                                    <li class="desplegable"><a class="dropdown-item" href="#">Inglés</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -80,11 +85,11 @@
             <div>
                 <img src="./recursos/imagen principal-inicio.jpg" alt="Paisaje Río Negro">
             </div>
-            <ul>
+            <ul class="animate__animated animate__fadeInDown">
                 <li><a href="./pages/informacion.html">Centro de Información Turística</a>
                 </li>
-                <li><a href="./pages/informacion.html">¿DÓNDE ESTAMOS?</a></li>
-                <li><a href="https://web.whatsapp.com/">WHATSAPP</a></li>
+                <li><a href="./pages/informacion.html">¿Dónde estamos?</a></li>
+                <li><a href="https://web.whatsapp.com/">WhatsApp  <i class="fa-brands fa-whatsapp"></i></a></li>
             </ul>
             <!-- regiones y calendario -->
             <section>
@@ -109,26 +114,19 @@
                     </a>
                 </article>
                 <article> <img src="./recursos/calendario 1-01.jpg" alt="Calendario Fechas Festivas del mes">
-                    <h2>Días Festivos</h2>
+                    <a class="nav-link disabled" aria-disabled="true">
+                        <h2>Días Festivos</h2>
+                    </a>
                 </article>
             </section>
         </main>
-        <!-- pie de página -->
         <footer class="footer">
             <div>
-                <h4>Redes Sociales</h4>
+                <h3>Redes Sociales</h3>
                 <ul>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="#">xx</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">whatsapp</a></li>
-                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </div>
         </footer>
