--- a/pages/conoce.html
+++ b/pages/conoce.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Historia</title>
+    <meta name="description" content="Río Negro fue parte de la gobernación de la Patagonia hasta el 16 octubre de 1884, fecha en que se creó el territorio nacional de Río Negro, con capital en Viedma. El 10 de diciembre de 1957 el …">
+    <meta name="keywords" content="RIO NEGRO, PATAGONIA, HISTORIA, VIEDMA, Edgardo Castello, Juntos Somos Río Negro ">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <title>Historia</title>
+    <link rel="shortcut icon" href="../recursos/logo-chico-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -59,7 +64,7 @@
                                 <a class="nav-link" href="../pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima</a>
+                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -79,107 +84,108 @@
             <div>
                 <img src="../recursos/historia-01.jpg" alt="Paisaje Río Negro">
             </div>
-            <div class="h1">
+            <div class="animate__animated animate__fadeInDown">
                 <h1>Hitos de la historia de Río Negro</h1>
             </div>
-            <h2>El 11 de octubre de 1878</h2>
-            <p>El Gobierno Nacional dicta la Ley 954, que crea la Gobernación de la Patagonia. El coronel Álvaro Barros
-                fue
-                el primer gobernador del territorio. La capital se ubicó en la margen sur del río Negro, frente a la
-                ciudad
-                bonaerense de Carmen de Patagones.</p>
-            <h2>4 de julio de 1879</h2>
-            <p>El presidente Nicolás Avellaneda decretó que la capital del Gobernación de la Patagonia, pase a llamarse
-                Viedma.</p>
-            <h2>16 de octubre de 1884</h2>
-            <p>Se promulga la Ley de Organización de los Territorios Nacionales, que incluyó el Territorio Nacional de
-                Río
-                Negro. Los gobernadores eran designados por la Nación (no había elecciones) y Viedma siguió siendo la
-                capital.</p>
-            <h2>15 de junio de 1955</h2>
-            <p>Se sanciona la Ley 14.408, de creación de la provincia de Río Negro. El Congreso Nacional responde al
-                reclamo
-                de miles de vecinos y vecinas, que a partir de ese momento podrían elegir mediante el voto a sus propios
-                gobernantes. La Ley sería luego promulgada por el presidente Juan Domingo Perón.</p>
-            <h2>28 de junio de 1955</h2>
-            <p>Cambian las funciones de Emilio Berenguer, quien hasta ese momento ocupaba el cargo de gobernador del
-                Territorio Nacional de Río Negro. Se convirtió en comisionado nacional en Río Negro. Apenas asumió,
-                comenzó
-                con la tarea de organización del Estado Provincial.</p>
-            <h2>3 de septiembre de 1955</h2>
-            <p>Berenguer pone en funciones a su gabinete, pero el golpe militar interrumpió la vigencia de las
-                instituciones
-                y derrocó al presidente Perón. El proceso quedó paralizado, y asumió como interventor nacional el
-                coronel
-                Gualberto Wheeler.</p>
-            <h2>26 de abril de 1957</h2>
-            <p>El presidente de facto general Pedro Aramburu designó a Carlos Santiago Ramos Mejía como interventor
-                federal.
-                Desde la Nación dictan el decreto nacional 4.347/57, que dispone la convocatoria a elección de
-                convencionales constituyentes para el 28 de julio.</p>
-            <h2>Septiembre de 1957</h2>
-            <p>Luego de las elecciones, comenzó a sesionar la Convención Constituyente en Viedma.</p>
-            <h2>23 de febrero de 1958</h2>
-            <p>El Ejecutivo Nacional convoca a elecciones para gobernador, legisladores provinciales y gobiernos
-                municipales. El ganador es Edgardo Castello, por la Unión Cívica Radical Intransigente, y se convierte
-                en el
-                primer gobernador de la Provincia de Río Negro.</p>
-            <h2>1 de mayo de 1958</h2>
-            <p>Ante la Legislatura Provincial recién constituida, Castello prestó juramento como primer gobernador
-                electo.
-            </p>
-            <h2>18 de marzo de 1962</h2>
-            <p>El Partido Blanco gana las elecciones (conformado por el peronismo que seguía proscrito) con Arturo
-                Llanos
-                como candidato, pero nuevamente el proceso queda trunco por el golpe de Estado que derroca a Arturo
-                Frondizi.</p>
-            <h2> 7 de julio de 1963</h2>
-            <p>En nuevas elecciones, se impone Carlos Nielsen, por la Unión Cívica Radical del Pueblo. Asumió el 12 de
-                octubre, pero una nueva intervención militar en 1966 suspendió su mandato.</p>
-            <h2> 11 de marzo de 1973</h2>
-            <p>Primeras elecciones sin partidos políticos proscriptos. Gana el justicialista Mario José Franco, quien
-                ocupó
-                el cargo hasta la irrupción de la dictadura cívico militar en marzo de 1976.</p>
-            <h2>20 de octubre de 1973</h2>
-            <p>La Legislatura de Río Negro votó por unanimidad la Ley 852, y dispuso que Viedma sea definitivamente la
-                de
-                Capital de la Provincia de Río Negro.</p>
-            <h2> 30 de octubre de 1983</h2>
-            <p>El radical Osvaldo Álvarez Guerrero se impone en las primeras elecciones tras el regreso a la democracia.
-                Asumió el 10 de diciembre, fecha que quedó establecida para el cambio de mandato.</p>
-            <h2>6 de septiembre de 1987</h2>
-            <p>Es elegido gobernador el radical Horacio Massaccesi y reelegido el 11 de mayo de 1991. La Convención
-                Constituyente de 1988 incorporó la figura del vicegobernador, con funciones de presidente de la
-                Legislatura.
-            </p>
-            <h2>14 de mayo de 1995</h2>
-            <p>La fórmula radical Pablo Verani-Bautista Mendioroz se impone ne las elecciones, y es reelegida el 24 de
-                junio
-                de 1999.</p>
-            <h2>31 de agosto de 2003</h2>
-            <p>Son elegidos Miguel Saiz y Mario De Rege, como gobernador y vice. El 20 de mayo de 2007 Saiz es
-                reelegido,
-                pero con Mendioroz como vicegobernador.</p>
-            <h2>25 de septiembre de 2011</h2>
-            <p>Triunfó la fórmula Carlos Soria-Alberto Weretilneck, por el Frente para la Victoria.</p>
-            <h2>1 de enero de 2012</h2>
-            <p>En trágicas circunstancias, muere el Gobernador Soria. Se aplica por primera vez en la historia
-                institucional
-                de Río Negro el sistema de acefalía y Alberto Weretilneck asumió como gobernador.</p>
-            <h2> 14 de junio de 2015</h2>
-            <p>Con el sello de Juntos Somos Río Negro, el gobernador Alberto Weretilneck es reelegido en ese cargo,
-                acompañado por Pedro Pesatti como vicegobernador. Se convierte en el gobernador más votado de la
-                historia
-                provincial con el 52,8% de los sufragios.</p>
-            <h2> 7 de abril de 2019</h2>
-            <p>Se elige la primera gobernadora mujer de la historia de la provincia. Con el 52,6% de los votos, Arabela
-                Carreras gana las elecciones provinciales, junto a Alejandro Palmieri. Continúa los lineamientos de la
-                gestión de Juntos Somos Río Negro.</p>
+            <section>
+                <h2>El 11 de octubre de 1878</h2>
+                <p>El Gobierno Nacional dicta la Ley 954, que crea la Gobernación de la Patagonia. El coronel Álvaro
+                    Barros fue el primer gobernador del territorio. La capital se ubicó en la margen sur del río Negro, frente a la
+                    ciudad bonaerense de Carmen de Patagones.</p>
+                <h2>4 de julio de 1879</h2>
+                <p>El presidente Nicolás Avellaneda decretó que la capital del Gobernación de la Patagonia, pase a
+                    llamarse Viedma.</p>
+                <h2>16 de octubre de 1884</h2>
+                <p>Se promulga la Ley de Organización de los Territorios Nacionales, que incluyó el Territorio Nacional
+                    de Río Negro. Los gobernadores eran designados por la Nación (no había elecciones) y Viedma siguió siendo
+                    la capital.</p>
+                <h2>15 de junio de 1955</h2>
+                <p>Se sanciona la Ley 14.408, de creación de la provincia de Río Negro. El Congreso Nacional responde al
+                    reclamo de miles de vecinos y vecinas, que a partir de ese momento podrían elegir mediante el voto a sus
+                    propios gobernantes. La Ley sería luego promulgada por el presidente Juan Domingo Perón.</p>
+                <h2>28 de junio de 1955</h2>
+                <p>Cambian las funciones de Emilio Berenguer, quien hasta ese momento ocupaba el cargo de gobernador del
+                    Territorio Nacional de Río Negro. Se convirtió en comisionado nacional en Río Negro. Apenas asumió,
+                    comenzó con la tarea de organización del Estado Provincial.</p>
+                <h2>3 de septiembre de 1955</h2>
+                <p>Berenguer pone en funciones a su gabinete, pero el golpe militar interrumpió la vigencia de las
+                    instituciones  y derrocó al presidente Perón. El proceso quedó paralizado, y asumió como interventor nacional el
+                    coronel Gualberto Wheeler.</p>
+                <h2>26 de abril de 1957</h2>
+                <p>El presidente de facto general Pedro Aramburu designó a Carlos Santiago Ramos Mejía como interventor
+                    federal.
+                    Desde la Nación dictan el decreto nacional 4.347/57, que dispone la convocatoria a elección de
+                    convencionales constituyentes para el 28 de julio.</p>
+                <h2>Septiembre de 1957</h2>
+                <p>Luego de las elecciones, comenzó a sesionar la Convención Constituyente en Viedma.</p>
+                <h2>23 de febrero de 1958</h2>
+                <p>El Ejecutivo Nacional convoca a elecciones para gobernador, legisladores provinciales y gobiernos
+                    municipales. El ganador es Edgardo Castello, por la Unión Cívica Radical Intransigente, y se
+                    convierte en el primer gobernador de la Provincia de Río Negro.</p>
+                <h2>1 de mayo de 1958</h2>
+                <p>Ante la Legislatura Provincial recién constituida, Castello prestó juramento como primer gobernador
+                    electo.
+                </p>
+                <h2>18 de marzo de 1962</h2>
+                <p>El Partido Blanco gana las elecciones (conformado por el peronismo que seguía proscrito) con Arturo
+                    Llanos como candidato, pero nuevamente el proceso queda trunco por el golpe de Estado que derroca a Arturo
+                    Frondizi.</p>
+                <h2> 7 de julio de 1963</h2>
+                <p>En nuevas elecciones, se impone Carlos Nielsen, por la Unión Cívica Radical del Pueblo. Asumió el 12
+                    de octubre, pero una nueva intervención militar en 1966 suspendió su mandato.</p>
+                <h2> 11 de marzo de 1973</h2>
+                <p>Primeras elecciones sin partidos políticos proscriptos. Gana el justicialista Mario José Franco,
+                    quien ocupó el cargo hasta la irrupción de la dictadura cívico militar en marzo de 1976.</p>
+                <h2>20 de octubre de 1973</h2>
+                <p>La Legislatura de Río Negro votó por unanimidad la Ley 852, y dispuso que Viedma sea definitivamente
+                    la de Capital de la Provincia de Río Negro.</p>
+                <h2> 30 de octubre de 1983</h2>
+                <p>El radical Osvaldo Álvarez Guerrero se impone en las primeras elecciones tras el regreso a la
+                    democracia.
+                    Asumió el 10 de diciembre, fecha que quedó establecida para el cambio de mandato.</p>
+                <h2>6 de septiembre de 1987</h2>
+                <p>Es elegido gobernador el radical Horacio Massaccesi y reelegido el 11 de mayo de 1991. La Convención
+                    Constituyente de 1988 incorporó la figura del vicegobernador, con funciones de presidente de la
+                    Legislatura.
+                </p>
+                <h2>14 de mayo de 1995</h2>
+                <p>La fórmula radical Pablo Verani-Bautista Mendioroz se impone ne las elecciones, y es reelegida el 24
+                    de junio de 1999.</p>
+                <h2>31 de agosto de 2003</h2>
+                <p>Son elegidos Miguel Saiz y Mario De Rege, como gobernador y vice. El 20 de mayo de 2007 Saiz es
+                    reelegido, pero con Mendioroz como vicegobernador.</p>
+                <h2>25 de septiembre de 2011</h2>
+                <p>Triunfó la fórmula Carlos Soria-Alberto Weretilneck, por el Frente para la Victoria.</p>
+                <h2>1 de enero de 2012</h2>
+                <p>En trágicas circunstancias, muere el Gobernador Soria. Se aplica por primera vez en la historia
+                    institucional de Río Negro el sistema de acefalía y Alberto Weretilneck asumió como gobernador.</p>
+                <h2> 14 de junio de 2015</h2>
+                <p>Con el sello de Juntos Somos Río Negro, el gobernador Alberto Weretilneck es reelegido en ese cargo,
+                    acompañado por Pedro Pesatti como vicegobernador. Se convierte en el gobernador más votado de la
+                    historia  provincial con el 52,8% de los sufragios.</p>
+                <h2> 7 de abril de 2019</h2>
+                <p>Se elige la primera gobernadora mujer de la historia de la provincia. Con el 52,6% de los votos,
+                    Arabela Carreras gana las elecciones provinciales, junto a Alejandro Palmieri. Continúa los lineamientos de
+                    la gestión de Juntos Somos Río Negro.</p>
+            </section>
         </main>
-        <!-- pie de página -->
-        <footer>
-            <!-- información de copy -->
-            <p>&copy Coder Comision 53780</p>
+        <footer class="footer">
+            <div>
+                <h4>Redes Sociales</h4>
+                <ul>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">whatsapp</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </div>
         </footer>
 
     </div>
