--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Información</title>
+    <meta name="description" content="Centro de informes de Río Negro">
+    <meta name="keywords" content="RIO NEGRO, PATAGONIA, TURISMO, CENTRO DE INFORMES RIO NEGRO, AVENTURA, MINISTERIO DE TURISMO">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <title>Información</title>
+    <link rel="shortcut icon" href="../recursos/logo-chico-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -59,7 +64,7 @@
                                 <a class="nav-link" href="../pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima</a>
+                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -74,9 +79,10 @@
                     </div>
                 </div>
             </nav>
-            <!-- imagen principal -->
+        </header>
+        <main class="main-informacion">
             <div>
-                <div class="main-informacion">
+                <div>
                     <h1>Centros de informes</h1>
                 </div>
                 <div class="maps">
@@ -86,20 +92,32 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-        </header>
-        <main class="main-informacion">
             <h2>Ministerio de turismo Río Negro</h2>
             <p>Teléfono: 02920-424615/422150</p>
             <p>A. Zatti 287 1° Piso - CP (8500)
                 Viedma, Río Negro</p>
-                <br>
+            <br>
             <h2>Casa de Río Negro en Buenos Aires</h2>
             <p>(011) 4371-7273</p>
             <p>Tucumán 1916. Capital Federal.</p>
         </main>
-        <footer>
-            <!-- información de copy -->
-            <p>&copy Coder Comision 53780</p>
+        <footer class="footer">
+            <div>
+                <h4>Redes Sociales</h4>
+                <ul>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">whatsapp</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
