--- a/pages/que-hacer.html
+++ b/pages/que-hacer.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gastronomía</title>
+    <meta name="description" content="Conocé lo que ofrece la gastronomía de Río negro en cada región">
+    <meta name="keywords" content="RIO NEGRO, PATAGONIA, TURISMO, GASTRONOMÍA CORDILLERA, CASTRONOMÍA ESTEPA, GASTRONOMÍA VALLE, GASTRONOMÍA COSTA">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
+    <title>Gastronomía</title>
+    <link rel="shortcut icon" href="../recursos/logo-chico-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -59,7 +64,7 @@
                                 <a class="nav-link" href="../pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima</a>
+                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -74,16 +79,15 @@
                     </div>
                 </div>
             </nav>
-            <!-- imagen principal -->
+        </header>
+        <main class="main-quehacer">
             <div>
                 <img src="../recursos/Cerveza-artesanal.jpg" alt="Gastronomía">
-                <div class="h1">
-                    <h1>Gastronomía de Río Negro</h1>
-                </div>
             </div>
-        </header>
-        <main>
-            <section class="fotos-quehacer">
+            <div class="animate__animated animate__fadeInDown">
+                <h1>Gastronomía de Río Negro</h1>
+            </div>
+            <section class="fotos">
                 <article class="imagen-1">
                     <H2>Cordillera</H2>
                 </article>
@@ -98,9 +102,23 @@
                 </article>
             </section>
         </main>
-        <footer>
-            <!-- información de copy -->
-            <p>&copy Coder Comision 53780</p>
+        <footer class="footer">
+            <div>
+                <h4>Redes Sociales</h4>
+                <ul>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">whatsapp</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
