--- a/pages/que-hacer.html
+++ b/pages/que-hacer.html
@@ -104,19 +104,10 @@
         </main>
         <footer class="footer">
             <div>
-                <h4>Redes Sociales</h4>
                 <ul>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Instagram</a></li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="#">xx</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">whatsapp</a></li>
-                    <li><a href="#">xx</a></li>
+                    <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
                 </ul>
             </div>
         </footer>
