--- a/pages/conoce.html
+++ b/pages/conoce.html
@@ -169,9 +169,9 @@
                     la gestión de Juntos Somos Río Negro.</p>
             </section>
         </main>
-        <footer class="footer">
+        <footer>
             <div>
-                <ul>
+                <ul class="footer">
                     <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
