--- a/pages/imperdibles.html
+++ b/pages/imperdibles.html
@@ -126,9 +126,9 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
-        <footer class="footer">
+        <footer>
             <div>
-                <ul>
+                <ul class="footer">
                     <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
