--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -101,9 +101,9 @@
             <p>(011) 4371-7273</p>
             <p>Tucumán 1916. Capital Federal.</p>
         </main>
-        <footer class="footer">
+        <footer>
             <div>
-                <ul>
+                <ul class="footer">
                     <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
