--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Descubre las mejores opciones para disfrutar de la provincia de Río Negro, desde la aventura hasta la cultura, pasando por la gastronomía y el vino. Explora los paisajes, las …">
+    <meta name="description"
+        content="Descubre las mejores opciones para disfrutar de la provincia de Río Negro, desde la aventura hasta la cultura, pasando por la gastronomía y el vino. Explora los paisajes, las …">
     <meta name="keywords" content="RIO NEGRO, VACACIONES, PATAGONIA, BARILOCHE, CORDILLERA, ESTEPA, VALLE, COSTA ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -64,7 +65,8 @@
                                 <a class="nav-link" href="./pages/informacion.html">Información</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Clima <i class="fa-solid fa-cloud-showers-heavy"></i></a>
+                                <a class="nav-link disabled" aria-disabled="true">Clima <i
+                                        class="fa-solid fa-cloud-showers-heavy"></i></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -89,7 +91,7 @@
                 <li><a href="./pages/informacion.html">Centro de Información Turística</a>
                 </li>
                 <li><a href="./pages/informacion.html">¿Dónde estamos?</a></li>
-                <li><a href="https://web.whatsapp.com/">WhatsApp  <i class="fa-brands fa-whatsapp"></i></a></li>
+                <li><a href="https://web.whatsapp.com/">WhatsApp <i class="fa-brands fa-whatsapp"></i></a></li>
             </ul>
             <!-- regiones y calendario -->
             <section>
@@ -120,9 +122,9 @@
                 </article>
             </section>
         </main>
-        <footer class="footer">
+        <footer>
             <div>
-                <ul>
+                <ul class="footer">
                     <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
