--- a/pages/que-hacer.html
+++ b/pages/que-hacer.html
@@ -102,9 +102,9 @@
                 </article>
             </section>
         </main>
-        <footer class="footer">
+        <footer>
             <div>
-                <ul>
+                <ul class="footer">
                     <li><a href="#">Twitter <i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#">Facebook <i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#">Instagram <i class="fa-brands fa-instagram"></i></a></li>
