--- a/pages/imperdibles.html
+++ b/pages/imperdibles.html
@@ -123,13 +123,6 @@
         <footer class="footer">
             <div class="grupo">
                 <div class="box-1">
-                    <figure>
-                        <a href="#">
-                            <img src="../recursos/Logo.png" alt="Logo de Río Negro">
-                        </a>
-                    </figure>
-                </div>
-                <div class="box-2">
                     <h2>Localidades</h2>
                     <a href="#">Allen</a>
                     <a href="#">Bahía Creek</a>
@@ -142,59 +135,55 @@
                     <a href="#">Cinco Saltos</a>
                     <a href="#">Cipolletti</a>
                 </div>
-                <div class="box-3">
+                <div class="box-2">
                     <br>
                     <a href="#">Comallo</a>
-                    <a href="#">Bahía Creek</a>
-                    <a href="#">Campo Grande</a>
-                    <a href="#">Catriel</a>
-                    <a href="#">Cervantes</a>
-                    <a href="#">Chichinales</a>
-                    <a href="#">Chimpay</a>
-                    <a href="#">Choele Choel</a>
-                    <a href="#">Cinco Saltos</a>
-                    <a href="#">Comallo</a>
+                    <a href="#">Contralmirante Cordero</a>
+                    <a href="#">Coronel Belisle</a>
+                    <a href="#">Darwin</a>
+                    <a href="#">Dina Huapi</a>
+                    <a href="#">El Bolsón</a>
+                    <a href="#">El Cóndor</a>
+                    <a href="#">El Manso</a>
+                    <a href="#">General Conesa</a>
+                    <a href="#">General Fernández Oro</a>
+                </div>
+                <div class="box-3">
+                    <br>
+                    <a href="#">General Godoy</a>
+                    <a href="#">General Roca</a>
+                    <a href="#">Guardia Mitre</a>
+                    <a href="#">Ingeniero Huergo</a>
+                    <a href="#">Ingeniero Jacobacci</a>
+                    <a href="#">La Lobería</a>
+                    <a href="#">Lamarque</a>
+                    <a href="#">Las Grutas</a>
+                    <a href="#">Los Menucos</a>
+                    <a href="#">Luis Beltrán</a>
                 </div>
                 <div class="box-4">
                     <br>
-                    <a href="#">Allen</a>
-                    <a href="#">Bahía Creek</a>
-                    <a href="#">Campo Grande</a>
-                    <a href="#">Catriel</a>
-                    <a href="#">Cervantes</a>
-                    <a href="#">Chichinales</a>
-                    <a href="#">Chimpay</a>
-                    <a href="#">Choele Choel</a>
-                    <a href="#">Cinco Saltos</a>
-                    <a href="#">Comallo</a>
+                    <a href="#">Mainqué</a>
+                    <a href="#">Maquinchao</a>
+                    <a href="#">Ministro Ramos Mexía</a>
+                    <a href="#">Ñorquincó</a>
+                    <a href="#">Pilcaniyeu</a>
+                    <a href="#">Playas Doradas</a>
+                    <a href="#">Pomona</a>
+                    <a href="#">Río Colorado</a>
+                    <a href="#">San Antonio Este</a>
+                    <a href="#">San Antonio Oeste</a>
                 </div>
                 <div class="box-5">
                     <br>
-                    <a href="#">Allen</a>
-                    <a href="#">Bahía Creek</a>
-                    <a href="#">Campo Grande</a>
-                    <a href="#">Catriel</a>
-                    <a href="#">Cervantes</a>
-                    <a href="#">Chichinales</a>
-                    <a href="#">Chimpay</a>
-                    <a href="#">Choele Choel</a>
-                    <a href="#">Cinco Saltos</a>
-                    <a href="#">Comallo</a>
+                    <a href="#">San Carlos de Bariloche</a>
+                    <a href="#">Sierra Colorada</a>
+                    <a href="#">Sierra Grande</a>
+                    <a href="#">Valcheta</a>
+                    <a href="#">Viedma</a>
+                    <a href="#">Villa Regina</a>
                 </div>
                 <div class="box-6">
-                    <br>
-                    <a href="#">Allen</a>
-                    <a href="#">Bahía Creek</a>
-                    <a href="#">Campo Grande</a>
-                    <a href="#">Catriel</a>
-                    <a href="#">Cervantes</a>
-                    <a href="#">Chichinales</a>
-                    <a href="#">Chimpay</a>
-                    <a href="#">Choele Choel</a>
-                    <a href="#">Cinco Saltos</a>
-                    <a href="#">Comallo</a>
-                </div>
-                <div class="box-7">
                     <h3>Ministerio de turismo Río Negro</h3>
                     <p> Teléfono: 02920-424615/422150
                         <br>
@@ -203,12 +192,15 @@
                         A. Zatti 287 1° Piso - CP (8500) Viedma, Río Negro
                     </p>
                 </div>
-                <div class="box-8">
+                <div class="box-7">
                     <div class="red-social">
                         <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
                         <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
+                </div>
+                <div class="box-8">
+                    <a href="#">SUBIR</a>
                 </div>
             </div>
         </footer>
