--- a/index.html
+++ b/index.html
@@ -121,13 +121,6 @@
         <footer class="footer">
             <div class="grupo">
                 <div class="box-1">
-                    <figure>
-                        <a href="#">
-                            <img src="./recursos/Logo.png" alt="Logo de Río Negro">
-                        </a>
-                    </figure>
-                </div>
-                <div class="box-2">
                     <h2>Localidades</h2>
                     <a href="#">Allen</a>
                     <a href="#">Bahía Creek</a>
@@ -140,7 +133,7 @@
                     <a href="#">Cinco Saltos</a>
                     <a href="#">Cipolletti</a>
                 </div>
-                <div class="box-3">
+                <div class="box-2">
                     <br>
                     <a href="#">Comallo</a>
                     <a href="#">Contralmirante Cordero</a>
@@ -153,7 +146,7 @@
                     <a href="#">General Conesa</a>
                     <a href="#">General Fernández Oro</a>
                 </div>
-                <div class="box-4">
+                <div class="box-3">
                     <br>
                     <a href="#">General Godoy</a>
                     <a href="#">General Roca</a>
@@ -166,7 +159,7 @@
                     <a href="#">Los Menucos</a>
                     <a href="#">Luis Beltrán</a>
                 </div>
-                <div class="box-5">
+                <div class="box-4">
                     <br>
                     <a href="#">Mainqué</a>
                     <a href="#">Maquinchao</a>
@@ -179,7 +172,7 @@
                     <a href="#">San Antonio Este</a>
                     <a href="#">San Antonio Oeste</a>
                 </div>
-                <div class="box-6">
+                <div class="box-5">
                     <br>
                     <a href="#">San Carlos de Bariloche</a>
                     <a href="#">Sierra Colorada</a>
@@ -188,7 +181,7 @@
                     <a href="#">Viedma</a>
                     <a href="#">Villa Regina</a>
                 </div>
-                <div class="box-7">
+                <div class="box-6">
                     <h3>Ministerio de turismo Río Negro</h3>
                     <p> Teléfono: 02920-424615/422150
                         <br>
@@ -197,12 +190,15 @@
                         A. Zatti 287 1° Piso - CP (8500) Viedma, Río Negro
                     </p>
                 </div>
-                <div class="box-8">
+                <div class="box-7">
                     <div class="red-social">
                         <a href="https://twitter.com/?lang=es"><i class="fa-brands fa-twitter"></i></a>
                         <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
+                </div>
+                <div class="box-8">
+                    <a href="#">SUBIR</a>
                 </div>
             </div>
         </footer>
